[package]
name = "AOC"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
derive_deref = "1.1.1"
indexmap = "2.12.1"
md5 = "0.7.0"
nalgebra = "0.34.1"
num = "0.4.3"
num-traits = "0.2.19"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
