[package]
name = "AOC"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
derive_deref = "1.1.1"
fxhash = "0.2.1"
hashbrown = "0.16.1"
indexmap = "2.12.1"
itertools = "0.14.0"
md5 = "0.7.0"
nalgebra = "0.34.1"
num = "0.4.3"
num-rational = "0.4.2"
num-traits = "0.2.19"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "AOC"
path = "src/lib.rs"

[[bin]]
name = "update_benchmarks"
path = "src/bin/update_benchmarks.rs"

[[bench]]
name = "solutions"
harness = false
